--- a/区块链100问.md
+++ b/区块链100问.md
@@ -1,5 +1,5 @@
 # 区块链100问
-
+![区块链100问](https://raw.githubusercontent.com/LittleNewton/LittleNewton_Figures_References/master/2018-04-08_162447%20%E5%8C%BA%E5%9D%97%E9%93%BE100%E8%AE%B2.png)
 ## 1
 实物货币（具有稀缺性）
 纸币
@@ -88,4 +88,120 @@ Nothing
 矿工验证这个签名(字符串)，一方面证明该交易是转出方本人发起的；另一方面证明没有被篡改。数字摘要+非对称数字加密。用SHA256生成摘要，然后对摘要进行私钥加密，形成数字签名。之后把完整的明文交易信息与数字签名一起广播。矿工用我的公钥进行验证。矿工看一下交易信息，假设这是对的，然后找到付款人的公钥，解开数字签名，货的哈希值，然后对交易信息进行哈希校验，与解密得到的哈希值进行对比，如果一样，说明这个没有经过篡改。
 >我要是伪造一个呢？把交易信息和数字签名一起伪造，那这就相当于创造一个数字签名。付款人没有理由编造这么一个付款记录，所以不存在这种情况。
 
-## 22.
+## 22. 比特币交易和找零机制
+比特币转账可以一次把**多个地址**的余额转出，也可以一次转入到多个比特币地址。发起之后，全额转出，一个转给对方，剩下的作为找零，返还给自己。如果忘记声明，那么剩下的就当成手续费了。
+
+## 23. 挖矿是什么
+确认一段时间内的交易，打包形成新的区块的过程。挖矿就是生产比特币的过程。
+
+## 24. 比特币怎么挖矿
+矿机。加入矿池，矿场负责计算，矿池负责信息打包。矿池挖到比特币之后，根据全池算力比例进行收益分配。
+
+## 25. 矿工怎么挖矿？
+从事虚拟货币挖矿的人。
+
+## 26. 矿机是什么
+运行大量计算争夺记账权。矿机可以凭借专用芯片，强力挖矿。每种币算法不同，所需要的矿机也不相同。
+
+## 27. 比特币挖矿机的进化史
+CPU -> GPU -> 矿机 -> 矿池
+蚂蚁矿机，相当于三万多张GPU的算力。
+
+## 28. 矿场长什么样
+电费便宜的地方。通风、防尘、降温，温度湿度都有精准控制。改造成静音矿场。
+
+## 29. 矿池怎么挖矿？
+矿池负责信息打包，接入的矿机争夺记账权。矿池收益稳定。五大矿池，四个来自中国。
+
+## 30. 算力是什么？
+随机哈希碰撞。HASH/s。T为基本量级。一台矿机的算力可达14T，即14 * 10^3 * 10^3 * 10^3 * 10^3 Byte / s，有了单位，就可以分配蛋糕。
+
+## 31. 竞争记账
+解决了账本一致性问题。
+
+## 32. 如何投资区块链资产？
+- 场内交易（买比特币）
+- 场外交易
+- 中心化**交易平台**
+- 去中心化**交易平台**
+
+量化交易方式：
+- 趋势交易
+- 对冲
+- 跨平台搬砖
+
+## 33. 如何在交易平台投资区块链资产？
+你不需要知道是谁在卖比特币给你
+
+## 34. 量化交易是什么？
+决策
+- 趋势交易（根据趋势指标）
+- 对冲（进行两笔相反的投资，保证不赔不赚的同时有钱赚）
+- 跨平台搬砖（哦那个目标平台的价差达到一定金额，买入卖出赚差价）
+
+## 35. 区块链资产如何在场外交易
+场外交易也叫OTC交易，人与人协商交易。
+
+## 36. 去中心化交易平台是什么？
+不需要注册账户，使用个人数字资产账户即可参与交易。
+每笔交易都需要通过区块链进行。不保存用户信息（如私钥），这避免了平台的道德风险，但是要求你保管好自己的私钥。
+
+## 37. 币币交易
+比如，用比特币兑换以太坊。
+
+## 38. 比特币钱包是干嘛的
+- 比特币地址：银行卡账号
+- 私钥：银行卡密码
+- 比特币地址：存放银行卡（多个比特币地址）的钱包，也存放比特币的对应私钥。
+
+PC或手机客户端。写到纸上，也是一个钱包。
+
+## 39. 冷钱包、热钱包
+- 冷：网络不能访问私钥的钱包
+- 热：在线钱包！开启二次认证最好。
+
+## 40. 全节点钱包、轻钱包
+- 全节点钱包```Bitcoin Corre```，需要所有的数据
+- 轻钱包：依赖比特币网络上其他全节点，进进同步与自己相关的数据，基本可以实现去中心化
+- 中心化钱包：依赖远程服务器，```平台注册```，就是中心化钱包。
+
+## 41. 比特币可以用于支付吗？
+在日本、德国可以。比特币钱包扫描二维码，显示汇率，及时支付。
+
+## 42. 区块链和比特币是什么关系？
+区块链是比特币的底层技术，比特币是区块链的第一个应用。
+
+## 43. 区块链技术的发展历史
+
+- bitcoin：比特币
+- Bitcoin：比特币技术
+
+2015年《经济学人》：封面文章重塑世界的区块链技术
+
+## 44. 区块链：制造信用的机器
+这是一种多技术糅合而成的技术，其中包括非对称加密、时间戳、工作量证明等。解决了双重支付，拜占庭将军问题。
+
+- 非对称加密```私钥安全```
+- 时间戳```区块按顺序成链```
+- 工作量证明```公平分发```
+
+## 45. 区块连接成区块链
+
+前一个区块的哈希
+
+## 46. 区块链记录哪些信息
+一个区块：
+- 区块头(区块的前80个字节，包含上一个区块的哈希值；时间戳，记录区块的生成时间；全网矿工一起PK的问题的答案——一个随机数；难度目标：该问题的难度)
+- 交易详情：每一笔转账的转入方、转出方、转出方的数字签名、金额
+- 交易计数器：该区块中交易的数量
+- 区块大小：区块的体积，目前1MB是上限，不排除有扩大的可能。
+
+## 47. 时间戳是什么？
+时间戳使区块上每一笔交易都有时间标记。这个时间标记无法篡改，
+> 那究竟是怎么防篡改呢？
+
+## 48. 最长区块链才是最长区块链？
+节点认为最长的就是最好的。六个区块确认才是真的保险。
+> 我觉得这个地方需要证明一下。还有，如果我的记录被放在了一个分支上，之后这个分支消亡了，我该如何是好？
+
+## 49
