拆分区块链100讲.

--- a/区块链100问 - 上.md
+++ b/区块链100问 - 上.md
@@ -204,4 +204,11 @@ PC或手机客户端。写到纸上，也是一个钱包。
 节点认为最长的就是最好的。六个区块确认才是真的保险。
 > 我觉得这个地方需要证明一下。还有，如果我的记录被放在了一个分支上，之后这个分支消亡了，我该如何是好？
 
-## 49
+## 49. 区块链如何分类？
+按照准入机制分为三类：
+- 私有链：不公开
+- 公有链：公开透明，每个人都可以竞争记账权力
+- 联盟链：半公开，一部分才有记账权力
+
+## 50. 区块链资产全球流通
+只要有网络，就可以使用区块链。
