Add FAQs and the Paper

--- a/区块链100问 - 上.md
+++ b/区块链100问 - 上.md
@@ -1,5 +1,5 @@
-# 区块链100问
-![区块链100问](https://raw.githubusercontent.com/LittleNewton/LittleNewton_Figures_References/master/2018-04-08_162447%20%E5%8C%BA%E5%9D%97%E9%93%BE100%E8%AE%B2.png)
+# 区块链100问 - 上篇
+![区块链100问](https://raw.githubusercontent.com/LittleNewton/LittleNewton_Figures_References/master/Blockchain_Research/2018-04-08_162447%20%E5%8C%BA%E5%9D%97%E9%93%BE100%E8%AE%B2.png)
 ## 1
 实物货币（具有稀缺性）
 纸币
@@ -199,6 +199,13 @@ PC或手机客户端。写到纸上，也是一个钱包。
 ## 47. 时间戳是什么？
 时间戳使区块上每一笔交易都有时间标记。这个时间标记无法篡改，
 > 那究竟是怎么防篡改呢？
+
+> 时间戳是指格林威治时间1970年01月01日00时00分00秒(北京时间1970年01月01日08时00分00秒)起至现在的总秒数。时间戳的组成：
+
+> 时间戳是一个经加密后形成的凭证文档，它包括三个部分：
+需加时间戳的文件的摘要；DTS收到文件的日期和时间；DTS的数字签名。
+
+> 一般来说，时间戳产生的过程为：用户首先将需要加时间戳的文件用编码加密形成摘要，然后将该摘要发送到链上，在加入了收到文件摘要的日期和时间信息后再对该文件加密（数字签名），然后送回用户。
 
 ## 48. 最长区块链才是最长区块链？
 节点认为最长的就是最好的。六个区块确认才是真的保险。
