--- a/区块链100问 - 上.md
+++ b/区块链100问 - 上.md
@@ -8,8 +8,7 @@
 ## 2
 Noting
 
-## 3
-比特币白皮书
+## 3 比特币白皮书
 2008.11.1发布，中本聪
 白皮书的面世，标志比特币底层技术“区块链”的诞生。
 
@@ -21,11 +20,11 @@ Noting
 ## 5
 Nothing
 
-## 6
-密码朋克，最早发布白皮书的地方，密码朋克是一套加密的电子邮件系统。这应该是一个加密的邮件列表(Mail list)，用户1400人左右，数十个很多数字货币，不过都以失败告终。
+## 6 密码朋克
+最早发布白皮书的地方，密码朋克是一套加密的电子邮件系统。这应该是一个加密的邮件列表(Mail list)，用户1400人左右，数十个很多数字货币，不过都以失败告终。
 
-## 7 **
-比特币是怎么发行的？很重要。区块就是一个账本，每个区块就是账本中的一页。系统自动生成比特币作为奖励，激励矿工参与记账(incentive)。最先解题成功的获得一定数量的比特币奖励。那么谁是“系统”？比特币是去中心化的，所以不能有中心系统。50，25...21W页减少一半.
+## 7 比特币是怎么发行的？
+很重要。区块就是一个账本，每个区块就是账本中的一页。系统自动生成比特币作为奖励，激励矿工参与记账(incentive)。最先解题成功的获得一定数量的比特币奖励。那么谁是“系统”？比特币是去中心化的，所以不能有中心系统。50，25...21W页减少一半.
 
 ## 8
 5.22，比特币披萨日，聚集起来吃披萨庆祝
@@ -36,11 +35,12 @@ Nothing
 ## 10
 比特币水龙头网站，导流比特币。免费派发比特币。
 
-## 11 **
-比特币为什么还没有挖完。题目难易程度与全网算力成正比。问题又来了，谁增加算力？去中心化的系统，不能有核心调节机构。
+## 11 比特币为什么还没有挖完
 
-## 12
-如何总量恒定？小数点后八位，细分。
+题目难易程度与全网算力成正比。问题又来了，谁增加算力？去中心化的系统，不能有核心调节机构。
+
+## 12 如何总量恒定？
+小数点后八位，细分。
 50
 25
 12.5
